--- a/Views/Student/ShowDetails.cshtml
+++ b/Views/Student/ShowDetails.cshtml
@@ -1,18 +1,9 @@
 ﻿
 @{
     Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>ShowDetails</title>
-</head>
-<body>
-    <div>
         <h1>show Student Details</h1>
-    </div>
-</body>
-</html>
+   
