--- a/Views/HOD/CancleAdmission.cshtml
+++ b/Views/HOD/CancleAdmission.cshtml
@@ -1,18 +1,8 @@
 ﻿
 @{
-    Layout = null;
+    ViewBag.Title = "CancleAdmission";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
+<h2>CancleAdmission</h2>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>CancleAdmission</title>
-</head>
-<body>
-    <div> 
-        <h1>View to cancle Admission of Student</h1>
-    </div>
-</body>
-</html>
