--- a/Views/Student/UpdateDetails.cshtml
+++ b/Views/Student/UpdateDetails.cshtml
@@ -1,18 +1,9 @@
 ﻿
 @{
     Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>UpdateDetails</title>
-</head>
-<body>
-    <div>
         <h1>Update Details</h1>
-    </div>
-</body>
-</html>
+    
