--- a/Views/Teacher/updateMarks.cshtml
+++ b/Views/Teacher/updateMarks.cshtml
@@ -1,18 +1,8 @@
 ﻿
 @{
     Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>updateMarks</title>
-</head>
-<body>
-    <div> 
         <h1>Update Student Marks</h1>
-    </div>
-</body>
-</html>
+  
